Project eduApp {
    database_type: 'PostgreSQL'
    Note: '''
    # EduApp Database
  '''
}


Table users {
  user_id bigserial [pk] 
  user_name varchar unique 
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [unique, not null]
  hashed_password varchar [not null]
  password_changed_at timestamptz [not null, default: `now()`]
  is_email_verified boolean [not null, default: false]
  role varchar [not null, default: 'student'] 
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table user_status {
  status_id bigserial [not null]
  user_id bigint [ref: - users.user_id, not null]
  active boolean [not null , default: false] 
  pending boolean [not null , default: false] 
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    status_id
    user_id
    (status_id,user_id)
}
}

Table sessions {
  session_id uuid [pk]
  user_id bigint [ref: > users.user_id, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table verify_emails {
  email_id bigserial [pk]
  user_id bigint [ref: > users.user_id, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table courses {
 course_id bigserial [pk]
 user_id bigint [ref: > users.user_id, not null]
 title varchar [not null]
 description varchar [not null]
 created_at timestamptz [not null, default: `now()`]
 updated_at timestamptz [not null, default: `now()`]

 Indexes {
    course_id
    user_id
    (course_id,user_id)
}
}

Table material {
  material_id bigserial [pk]
  course_id bigint [ref: > courses.course_id, not null]
  title varchar [not null]
  levels jsonb [not null, default: '{}' , note: "jsonb"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    material_id
    course_id
    (material_id,course_id)
}
}

Table assignment {
  assignment_id bigserial [pk]
  material_id bigint [ref: > material.material_id, not null]
  title varchar [not null]
  resource jsonb [not null, default: '{}' , note: "jsonb"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    assignment_id
    material_id
    (assignment_id,material_id)
}
}

Table marks {
  mark_id bigserial [pk]
  course_id bigint [ref: > courses.course_id, not null]
  user_id bigint [ref: > users.user_id, not null]
  marks bigint [not null] 
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    mark_id
    course_id
    user_id
    (mark_id,course_id,user_id)
}
}

Table subscriptions {
  subscription_id bigserial [pk]
  user_id bigint [ref: > users.user_id, not null]
  course_id bigint [ref: > courses.course_id, not null]
  active boolean [not null , default: false]
  pending boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    subscription_id
    user_id
    course_id
    (subscription_id,user_id,course_id)
}
}

Table course_progress {
  courseprogress_id bigserial [pk]
  course_id bigint [ref: > courses.course_id, not null]
  user_id bigint [ref: > users.user_id, not null]
  progress varchar [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    courseprogress_id
    course_id
    user_id
    (courseprogress_id,course_id,user_id)
}
}

Table submission {
  submission_id bigserial [pk]
  assignment_id bigint [ref: > assignment.assignment_id, not null]
  user_id bigint [ ref: > users.user_id, not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    submission_id
    assignment_id
    user_id
    (submission_id,assignment_id,user_id)
}
}